<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_dashboard"
        android:title="@string/dashboard"
        android:enabled="true"
        android:icon="@drawable/icon_home_enable" />
    <item
        android:id="@+id/action_sampah"
        android:title="@string/sampah"
        android:enabled="true"
        android:icon="@drawable/icon_jemput_disable"/>
    <item
        android:id="@+id/action_category"
        android:title="@string/kategori"
        android:enabled="true"
        android:icon="@drawable/icon_category_disable"/>

    <item
        android:id="@+id/action_report"
        android:title="@string/riwayat"
        android:enabled="true"
        android:icon="@drawable/icon_riwayat_disable"/>
    <item
        android:id="@+id/action_setting"
        android:title="@string/profile"
        android:enabled="true"
        android:icon="@drawable/icon_person_disable"/>
</menu>