<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".user.category.CategoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_titleJemputSampah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/title_Jenis_sampah"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/greenDeep"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/layout_jenisSampah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_titleJemputSampah"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_subtitleJemputSampah1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/subtitle_Jenis_sampah1"
                android:fontFamily="@font/poppins"
                android:textColor="@color/greenDeep"
                android:textSize="12sp"
                android:justificationMode="inter_word"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/tv_subtitleJemputSampah2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/subtitle_Jenis_sampah2"
                android:justificationMode="inter_word"
                android:fontFamily="@font/poppins"
                android:textColor="@color/greenDeep"
                android:textSize="12sp"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_jenisSampahAnorganik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_jenisSampah"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_titleSampahAnorganik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/title_anorganik"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/greenDeep"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_subtitleSampahAnorganik1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/subtitle_anorganik1"
                android:fontFamily="@font/poppins"
                android:textColor="@color/greenDeep"
                android:textSize="12sp"
                android:justificationMode="inter_word"
                tools:targetApi="o" />


            <TextView
                android:id="@+id/tv_subtitleSampahAnorganik2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/subtitle_anorganik2"
                android:justificationMode="inter_word"
                android:fontFamily="@font/poppins"
                android:textColor="@color/greenDeep"
                android:textSize="12sp"
                tools:targetApi="o" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_jenisSampahOrganik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_jenisSampahAnorganik"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_titleSampahOrganik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/title_organik"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/greenDeep"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tv_sybtitleSampahOrganik1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/subtitle_organik1"
                android:fontFamily="@font/poppins"
                android:textColor="@color/greenDeep"
                android:textSize="12sp"
                android:justificationMode="inter_word"
                tools:targetApi="o" />


            <TextView
                android:id="@+id/tv_sybtitleSampahOrganik2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/subtitle_organik2"
                android:justificationMode="inter_word"
                android:fontFamily="@font/poppins"
                android:textColor="@color/greenDeep"
                android:textSize="12sp"
                tools:targetApi="o" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>