<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ubah_gambar_profil"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/layout_take_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/ambil_dari_galeri"
                android:src="@drawable/ic_baseline_camera_alt_24"/>

            <TextView
                android:id="@+id/tv_take_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/ambil_foto_menggunakan_kamera"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_choose_from_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/ambil_dari_galeri"
                android:src="@drawable/ic_baseline_broken_image_24"/>

            <TextView
                android:id="@+id/tv_choose_from_gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/ambil_dari_galeri"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
